.provarCaches/00D5f000005vwGkEAI/objects/rstkf__arcuststmt1__c.object
<CustomObject>
    <customHelpPage>rstkf__objecthelp_arcuststmt1</customHelpPage>
    <description>arcuststmt1__c</description>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt1_effdate__c</fullName>
        <label>Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt1_enddate__c</fullName>
        <description>arcuststmt1_enddate__c</description>
        <inlineHelpText>The last in the range of days covered by this set of Customer Statements.  This date falls in the Statement Period (month and year).</inlineHelpText>
        <label>Statement Print Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt1_glcmp__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>AR Statements Sessions</relationshipLabel>
        <relationshipName>arcuststmt1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt1_month__c</fullName>
        <description>arcuststmt1_month__c</description>
        <inlineHelpText>The Statement Month for which this set of Statements was created. The last day of the statement range falls in this month.</inlineHelpText>
        <label>Statement Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt1_onetimetext__c</fullName>
        <label>One-Month Only Message</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt1_period__c</fullName>
        <formula>TEXT(rstkf__arcuststmt1_month__c) + &apos;-&apos; &amp; TEXT(rstkf__arcuststmt1_year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Statement Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt1_startdate__c</fullName>
        <description>arcuststmt1_startdate__c</description>
        <inlineHelpText>The first in the range of days covered by this set of Customer Statements.</inlineHelpText>
        <label>Statement Starting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt1_year__c</fullName>
        <description>arcuststmt1_year__c</description>
        <label>Statement Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__arcuststmt1_glcmp__r.rstkf__glcmp_cmpno__r.rstk__sycmp_cmpno__c &amp; &apos;_&apos; &amp; TEXT(rstkf__arcuststmt1_month__c) &amp; &apos;-&apos; &amp; TEXT(rstkf__arcuststmt1_year__c)</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>TEXT(rstkf__arcuststmt1_month__c) &amp; &apos;-&apos;  &amp; TEXT(rstkf__arcuststmt1_year__c) &amp; &apos;(&apos; &amp; rstkf__arcuststmt1_glcmp__r.rstkf__glcmp_cmpno__r.rstk__sycmp_cmpno__c &amp; &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>AR Statements Session</label>
    <listViews>
        <fullName>rstkf__RS_AR_Statements_Sessions</fullName>
        <columns>NAME</columns>
        <columns>rstkf__arcuststmt1_glcmp__c</columns>
        <columns>rstkf__arcuststmt1_effdate__c</columns>
        <columns>rstkf__arcuststmt1_onetimetext__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>AR Statements Sessions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AR Statements Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>